infra/k8s/deployment-external.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-frontend-external
  namespace: cars-frontend
  labels:
    app.kubernetes.io/instance: cars-frontend-external
    app.kubernetes.io/name: cars-frontend-external
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: cars-frontend-external
      app.kubernetes.io/name: cars-frontend-external
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: cars-frontend-external
        app.kubernetes.io/name: cars-frontend-external
    spec:
      containers:
        - name: cars-frontend-external
          image: silverfoxjv/cars-frontend:external
          imagePullPolicy: Always
          env: []
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
