infra/k8s/deployment-internal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-frontend-internal
  namespace: cars-frontend
  labels:
    app.kubernetes.io/instance: cars-frontend-internal
    app.kubernetes.io/name: cars-frontend-internal
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: cars-frontend-internal
      app.kubernetes.io/name: cars-frontend-internal
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: cars-frontend-internal
        app.kubernetes.io/name: cars-frontend-internal
    spec:
      containers:
        - name: cars-frontend-internal
          image: silverfoxjv/cars-frontend:internal
          imagePullPolicy: Always
          env: []
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
