infra/k8s/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: cars-frontend-internal-svc
  namespace: cars-frontend
spec:
  selector:
    app.kubernetes.io/instance: cars-frontend-internal
    app.kubernetes.io/name: cars-frontend-internal
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
