infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cars-frontend-svc
  namespace: cars-frontend
spec:
  selector:
    app.kubernetes.io/instance: cars-frontend
    app.kubernetes.io/name: cars-frontend
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
