infra/k8s/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cars-frontend-external-ingress
  namespace: cars-frontend
  annotations:
    cert-manager.io/cluster-issuer: at-dias-cloud-dns-cluster-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: cloudflare-tunnel
  tls:
    - hosts:
        - "*.at-dias.cloud"
      secretName: tls-at-dias-cloud-ingress-dns
  rules:
    - host: cars-frontend-external.at-dias.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cars-frontend-external-svc
                port:
                  name: http
